# surrealdb.java

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  VALUE_TYPES_VALIDATION.md  build.gradle  build.rs  index.html  pom.xml  rust-toolchain.toml  settings.gradle  test-with-timeout.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  cross-compile.yml  cross.yml  maven-publish.yml  maven-test.yml  publish.yml  release.yml  reports.yml  test.yml
com/surrealdb/: Surreal.java
config/checkstyle/: checkstyle.xml
examples/: .gitignore  build.gradle
gradle/wrapper/: gradle-wrapper.properties
jacoco/test/html/: index.html  jacoco-sessions.html
javadoc/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  search.html  serialized-form.html  type-search-index.js
javadoc/com/surrealdb/: AlreadyExistsDetailKind.html  AlreadyExistsException.html  Array.html  AuthDetailKind.html  ConfigurationDetailKind.html  ConfigurationException.html  ConnectionDetailKind.html  Entry.html  EntryIterator.html  EntryMut.html  ErrorKind.html  FileRef.html  Geometry.html  Id.html  InsertRelation.html  InternalException.html  LiveNotification.html  LiveStream.html  Native.html  NotAllowedDetailKind.html  NotAllowedException.html  NotFoundDetailKind.html  NotFoundException.html  NsDb.html  Object.html  QueryDetailKind.html  QueryException.html  RecordId.html  RecordIdRange.html  Relation.html  Response.html  SerializationDetailKind.html  SerializationException.html  ServerException.html  Surreal.html  SurrealDBException.html  SurrealException.html  SurrealName.html  Thing.html  ThrownException.html  (+9 more)
problems/: problems-report.html
src/: lib.rs
src/main/java/: lombok.config
src/main/rust/: array.rs  entry.rs  entryiterator.rs  entrymut.rs  error.rs  fileref.rs  geometry.rs  id.rs  lib.rs  live.rs  livequerystream.rs  macros.rs  notification.rs  object.rs  recordid.rs  response.rs  surreal.rs  syncentryiterator.rs  syncvalueiterator.rs  thing.rs  transaction.rs  value.rs  valueiterator.rs  valuemut.rs
src/test/java/: SurrealConnectionTest.java  SurrealExceptionsTest.java  SurrealSpecialOperationsTest.java  SurrealTest.java  TestUtils.java
src/test/resources/: junit-platform.properties  logback.xml
tests/test/: index.html
tests/test/classes/: com.surrealdb.ApiTests.html  com.surrealdb.BooleanOptionalTests.html  com.surrealdb.ConnectionTests.html  com.surrealdb.CreateTests.html  com.surrealdb.CredentialTests.html  com.surrealdb.DeleteTests.html  com.surrealdb.ErrorIntegrationTests.html  com.surrealdb.ErrorTests.html  com.surrealdb.ExampleTests.html  com.surrealdb.ExportImportTests.html  com.surrealdb.InheritedFieldsTests.html  com.surrealdb.InsertRelationTests.html  com.surrealdb.InsertTests.html  com.surrealdb.Issue160RegressionTests.html  com.surrealdb.LiveQueryQueryAsymmetryTests.html  com.surrealdb.LiveQueryTests.html  com.surrealdb.LiveQueryWebSocketTests.html  com.surrealdb.MultiSessionTests.html  com.surrealdb.PojoStandaloneTests.html  com.surrealdb.QueryTests.html  com.surrealdb.RecordIdRangeTests.html  com.surrealdb.RelateTests.html  com.surrealdb.RunTests.html  com.surrealdb.SelectTests.html  com.surrealdb.SurrealDBTest.html  (+8 more)
(+756 files in other folders)
