[package]
name = "surrealdb-java"
version = "3.0.4"
authors = ["Emmanuel Keller <emmanuel.keller@surrealdb.com>"]
edition = "2021"

[lib]
name = "surrealdb"
crate-type = ["cdylib"]
path = "src/main/rust/lib.rs"

[profile.release]
opt-level = 3

[dependencies]
jni = "0.21.1"
surrealdb = { version = "3.0.4", default-features = false, features = ["rustls", "protocol-http", "protocol-ws"] }
serde = "1.0.228"
serde_json = "1.0"
rust_decimal = "1.40.0"
tokio = "1.50.0"
parking_lot = "0.12.5"
once_cell = "1.21.3"
chrono = "0.4.44"
dashmap = "6.1.0"
futures = "0.3"
async-channel = "2.0"

[build-dependencies]
cargo-lock = "11.0.1"

[features]
default = ["rustls", "kv-mem", "kv-surrealkv", "protocol-ws", "protocol-http", "http", "jwks"]
rustls = ["surrealdb/rustls"]
jwks = ["surrealdb/jwks"]
http = ["surrealdb/http"]
kv-mem = ["surrealdb/kv-mem"]
kv-surrealkv = ["surrealdb/kv-surrealkv"]
protocol-ws = ["surrealdb/protocol-ws"]
protocol-http = ["surrealdb/protocol-http"]